테일윈드설치,스태틱폴더위치변경및세팅변경

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
 
 <html lang="UTF-8">
 <head>
+    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'common.css' %}">
     <meta charset="UTF-8">
     <title>세상에 나쁜 라켓은 없다</title>
 
