--- a/templates/racket/racketMain.html
+++ b/templates/racket/racketMain.html
@@ -4,9 +4,9 @@
 
 </head>
 <body>
-<h1>테니스 라켓 리스트</h1>
-<h3>Powered by '세상에 나쁜 라켓은 없다' since 2010</h3>
-<div>
+<h1 class="d-flex justify-content-center mt-4">테니스 라켓 리스트</h1>
+<h3 class="d-flex justify-content-center t-m-[15px]">Powered by '세상에 나쁜 라켓은 없다' since 2010</h3>
+<div class="">
     {%for item in racketList%}
 
     <ul>
