--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,16 +4,20 @@
 
 <html lang="UTF-8">
 <head>
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'common.css' %}">
     <meta charset="UTF-8">
     <title>세상에 나쁜 라켓은 없다</title>
 
+    <link rel="stylesheet" type="text/css" href="{% static 'common.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
 </head>
-<body>
+
+<body class="t-bg-blue-300">
+
+<div class="t-text-center t-bg-yellow-400 t-text-[30px]">네비게이션 = 메인로고 / 라켓 / 스트링 / 로그인</div>
 
 
 {% block content %}
+
 {% endblock %}
 
 
