--- a/base/static/common.css
+++ b/base/static/common.css
@@ -1,5 +1,5 @@
-.t-mt-3 {
-  margin-top: 0.75rem;
+.t-block {
+  display: block;
 }
 
 .t-grid {
@@ -10,34 +10,26 @@
   cursor: pointer;
 }
 
-.t-grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+.t-gap-5 {
+  gap: 1.25rem;
 }
 
-.t-gap-\[20px\] {
-  gap: 20px;
+.t-whitespace-nowrap {
+  white-space: nowrap;
 }
 
 .t-border-solid {
   border-style: solid;
 }
 
-.t-bg-blue-300 {
+.t-bg-gray-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 
 .t-bg-yellow-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
-}
-
-.t-text-center {
-  text-align: center;
-}
-
-.t-text-\[30px\] {
-  font-size: 30px;
 }
 
 .t-text-\[50px\] {
@@ -48,18 +40,10 @@
   font-size: 20px;
 }
 
-.t-text-\[15px\] {
-  font-size: 15px;
-}
-
-.t-text-\[25px\] {
-  font-size: 25px;
-}
-
 @font-face {
-  font-family: 'GmarketSansMedium';
+  font-family: 'KOTRALEAP';
 
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2110@1.0/KOTRALEAP.woff2') format('woff2');
 
   font-weight: normal;
 
@@ -74,7 +58,7 @@ html > body li {
 }
 
 html > body {
-  font-family: "GmarketSansMedium";
+  font-family: "KOTRALEAP";
   text-underline-position: under;
 }
 
@@ -97,9 +81,14 @@ html > body :is(h1, h2, h3, h4, h5, h6) {
 }
 
 @media (min-width: 1024px) {
-  @media (min-width: 640px) {
-    .lg\:sm\:t-grid-cols-4 {
-      grid-template-columns: repeat(4, minmax(0, 1fr));
-    }
+  .lg\:t-grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
+
+@media (min-width: 1280px) {
+  .xl\:t-grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+}
+
