--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,11 +9,43 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'common.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+
 </head>
 
-<body class="t-bg-blue-300">
+<body class="">
 
-<div class="t-text-center t-bg-yellow-400 t-text-[30px]">네비게이션 = 메인로고 / 라켓 / 스트링 / 로그인</div>
+<nav class="navbar navbar-expand-md navbar-dark bg-danger mb-4">
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+
+        <a class="navbar-brand" href="#">K라켓 위키</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item ">
+                <a class="nav-link" href="#">라켓 <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">스트링</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">About 세나라</a>
+            </li>
+        </ul>
+        <!--        <form class="form-inline mt-2 mt-md-0">-->
+        <!--          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">-->
+        <!--          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
+        <!--        </form>-->
+    </div>
+
+    <div class="t-bg-gray-500">
+        <button type="button" class="btn btn-light">카카오톡으로 로그인</button>
+        이곳에 카카오톡 로그인 구현
+    </div>
+</nav>
 
 
 {% block content %}
