--- a/base/static/common.css
+++ b/base/static/common.css
@@ -18,8 +18,25 @@
   white-space: nowrap;
 }
 
+.t-rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .t-border-solid {
   border-style: solid;
+}
+
+.t-border-dashed {
+  border-style: dashed;
+}
+
+.t-border-double {
+  border-style: double;
+}
+
+.t-border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
 .t-bg-gray-500 {
