--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,7 @@
         </button>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
-                <a class="nav-link" href="#">라켓 <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#">라켓<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">스트링</a>
@@ -45,7 +45,7 @@
 
         {%if user.is_authenticated%}
 
-        <a href="">
+        <a href="{%url 'account:logOut'%}">
             <button type="button" class="btn btn-dark">로그아웃</button>
         </a>
 
