--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-danger mb-4">
     <div class="collapse navbar-collapse" id="navbarCollapse">
 
-        <a class="navbar-brand" href="#">K라켓 위키</a>
+        <a class="navbar-brand" href="{%url 'racket:racketMain'%}">K라켓 위키</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
