--- a/templates/racket/racketMain.html
+++ b/templates/racket/racketMain.html
@@ -3,8 +3,9 @@
 {% block content %}
 {% with img_box_after_class="after:t-content-[attr(data-before)] after:t-hidden hover:after:t-block after:t-no-underline after:t-text-white after:t-border-2 after:t-border-white after:t-border-solid after:t-rounded after:t-p-2 after:t-whitespace-nowrap after:t-absolute after:t-top-[50%] after:t-left-[50%] after:t-translate-y-[-50%] after:t-translate-x-[-50%] after:t-transition-all" %}
 <div>
-    <h1 class="d-flex justify-content-center mt-4 t-text-[50px]">테니스 라켓 리스트</h1>
-    <h3 class="d-flex justify-content-center my-4 t-text-[20px]">Powered by '세상에 나쁜 라켓은 없다' since 2013</h3>
+    <h1 class="d-flex justify-content-center mt-6 t-text-[60px] bannerfont">테니스 라켓 리스트</h1>
+    <h3 class="d-flex justify-content-center mt-4 mb-5 t-text-[20px] bannerfont">Powered by '세상에 나쁜 라켓은 없다' since
+        2013</h3>
     <div class="d-flex justify-content-between bg-dark py-1  t-text-[20px]">
         <div class="">
             <form class="d-flex" action="{% url 'racket:racketMain'%}">
@@ -14,11 +15,22 @@
             </form>
         </div>
         <div class="mr-4">
-            <button type="button" class="btn btn-light">정렬순</button>
+            <ul>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle btn btn-light" href="#" id="dropdown08" data-bs-toggle="dropdown"
+                       aria-expanded="false">정렬순</a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdown08">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </div>
 
-    <section class="t-block section-racket-list t-bg-gray-100 pt-4">
+
+    <section class="t-block section-racket-list t-bg-gray-200 pt-4">
         <ul class="t-grid sm:t-grid-cols-2 md:t-grid-cols-3 lg:t-grid-cols-4 xl:t-grid-cols-5 t-gap-5">
             {%for item in racketItems%}
             <li class="mx-3">
@@ -27,7 +39,7 @@
                          height="250" class=" w-100 "><br>
                 </a>
 
-                <div class="d-flex justify-content-center t-bg-gray-200 ">
+                <div class="d-flex justify-content-center t-bg-gray-300 ">
                     <ul>
                         <li>{{item.name}} ({{item.regDateInt}}년)</li>
                         <li>세나라 평점 : 💛💛💛🤍</li>
