--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,13 +11,23 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'common.css' %}">
 
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
 
 
 </head>
 
 <body class="">
+
+{% if messages %}
+{% for message in messages %}
+<div class="alert alert-{{ message.tags }}">
+    {{ message }}
+</div>
+{% endfor %}
+{% endif %}
+
 
 <nav class="navbar navbar-expand-md navbar-dark bg-danger mb-5">
     <div class="collapse navbar-collapse" id="navbarCollapse">
