--- a/base/static/common.css
+++ b/base/static/common.css
@@ -1,3 +1,27 @@
+.t-mt-8 {
+  margin-top: 2rem;
+}
+
+.t-mt-9 {
+  margin-top: 2.25rem;
+}
+
+.t-mb-8 {
+  margin-bottom: 2rem;
+}
+
+.t-mb-9 {
+  margin-bottom: 2.25rem;
+}
+
+.t-mt-10 {
+  margin-top: 2.5rem;
+}
+
+.t-mt-\[100px\] {
+  margin-top: 100px;
+}
+
 .t-block {
   display: block;
 }
@@ -43,6 +67,21 @@
   line-height: 1;
 }
 
+.t-text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.t-text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.t-text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .t-text-\[60px\] {
   font-size: 60px;
 }
@@ -51,19 +90,22 @@
   font-size: 20px;
 }
 
-.t-text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.t-leading-relaxed {
+  line-height: 1.625;
 }
 
-.t-text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.t-leading-normal {
+  line-height: 1.5;
 }
 
 .t-text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.t-text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 @font-face {
@@ -107,98 +149,6 @@ html > body :is(h1, h2, h3, h4, h5, h6) {
   font-weight:normal;
   margin:0;
   font-size:1rem;
-}
-
-.after\:t-absolute::after {
-  content: var(--tw-content);
-  position: absolute;
-}
-
-.after\:t-top-\[50\%\]::after {
-  content: var(--tw-content);
-  top: 50%;
-}
-
-.after\:t-left-\[50\%\]::after {
-  content: var(--tw-content);
-  left: 50%;
-}
-
-.after\:t-hidden::after {
-  content: var(--tw-content);
-  display: none;
-}
-
-.after\:t-translate-y-\[-50\%\]::after {
-  content: var(--tw-content);
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.after\:t-translate-x-\[-50\%\]::after {
-  content: var(--tw-content);
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.after\:t-whitespace-nowrap::after {
-  content: var(--tw-content);
-  white-space: nowrap;
-}
-
-.after\:t-rounded::after {
-  content: var(--tw-content);
-  border-radius: 0.25rem;
-}
-
-.after\:t-border-2::after {
-  content: var(--tw-content);
-  border-width: 2px;
-}
-
-.after\:t-border-solid::after {
-  content: var(--tw-content);
-  border-style: solid;
-}
-
-.after\:t-border-white::after {
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.after\:t-p-2::after {
-  content: var(--tw-content);
-  padding: 0.5rem;
-}
-
-.after\:t-text-white::after {
-  content: var(--tw-content);
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.after\:t-no-underline::after {
-  content: var(--tw-content);
-  -webkit-text-decoration-line: none;
-          text-decoration-line: none;
-}
-
-.after\:t-transition-all::after {
-  content: var(--tw-content);
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.after\:t-content-\[attr\(data-before\)\]::after {
-  --tw-content: attr(data-before);
-  content: var(--tw-content);
-}
-
-.hover\:after\:t-block:hover::after {
-  content: var(--tw-content);
-  display: block;
 }
 
 @media (min-width: 640px) {
